@@ -26,6 +26,9 @@ jobs:
           - "5.24"
           - "5.22"
           - "5.20"
+          - "5.18"
+          - "5.16"
+          - "5.14"
 
     env:
       CIP_TAG: ${{ matrix.cip_tag }}
