@@ -2,7 +2,7 @@ package Alien::libnewrelic;
 
 use strict;
 use warnings;
-use 5.020;
+use 5.014;
 use base qw( Alien::Base );
 
 # ABSTRACT: Alien to download and install libnewrelic
